--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -5,3 +5,9 @@
     max-height: 100vh;
     background-size: cover;
   }
+
+  @media (min-width: 1200px){
+    .Home .homeImage{
+      height: 100vh;
+    }
+  }
