--- a/src/assets/css/navBar.css
+++ b/src/assets/css/navBar.css
@@ -65,7 +65,7 @@
 }
 
 .NavBar .btn button:hover{
-  background-color: #9e56f7;
+  background-color: var(--hover-color);
   transform: scale(1.1);
   transition: 0.4s
 }
