--- a/src/assets/css/searchBar.css
+++ b/src/assets/css/searchBar.css
@@ -6,6 +6,12 @@
   width: calc(100vw - 15px);
 }
 
+.SearchBar .formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .SearchBar form {
   padding: 1rem;
   width: 85vw;
@@ -55,6 +61,30 @@
 .SearchBar option {
   font-family: var(--second-font-family);
 }
+.SearchBar .second {
+  display: flex;
+}
+.SearchBar .money {
+  display: flex;
+  padding: 0 0.8rem;
+  width: 15rem;
+}
+
+.SearchBar .money select {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0.5rem;
+}
+.SearchBar .money select .price {
+  margin-right: 0.5rem;
+  padding-right: 1rem;
+}
+
+.SearchBar select:focus{
+  box-shadow: 0px 0px 10px 0px rgba(184, 129, 252, 0.808);
+}
+
+
 
 @media (max-width: 900px) {
   .SearchBar select,
@@ -72,15 +102,26 @@
     position: relative;
   }
 
+  .SearchBar .formContainer {
+    display: block;
+  }
+
+  .SearchBar .formContainer .second {
+    display: block;
+  }
+
+  .SearchBar .formContainer .money {
+    width: 100%;
+    padding-left: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  .SearchBar .formContainer .money select {
+    padding: 0.8rem;
+  }
+
   .SearchBar form {
     background-color: transparent;
-  }
-}
-
-@media (max-width: 940px) {
-  .SearchBar button {
-    margin: auto;
-    display: block;
   }
 }
 
