--- a/src/assets/css/detailRentalUnit.css
+++ b/src/assets/css/detailRentalUnit.css
@@ -114,15 +114,37 @@
   flex: 1;
 }
 
-.DetailRentalUnit .comment{
+.DetailRentalUnit .comment {
   margin-top: 5rem;
   margin-bottom: 3rem;
   padding: 1rem 0;
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
 }
 
-.DetailRentalUnit .comment h2{
+.DetailRentalUnit .comment h2 {
   padding: 1rem;
+}
+
+.DetailRentalUnit .contact {
+  padding: 2rem;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+}
+
+.DetailRentalUnit .contact h2 {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--main-color);
+}
+
+.DetailRentalUnit .contact span {
+  display: block;
+  width: 8rem;
+  font-weight: bold;
+  color: #606770;
+}
+
+.DetailRentalUnit .contact .contactElement {
+  display: flex;
+  padding: 1rem 0;
 }
 
 @media (max-width: 500px) {
