--- a/src/assets/css/createPost.css
+++ b/src/assets/css/createPost.css
@@ -1,4 +1,4 @@
-@import 'config.css';
+/* @import 'config.css';
 
 .createPostContainer {
   display: flex;
@@ -11,13 +11,11 @@
 }
 
 .createPostForm {
-  /* overflow-y: scroll; */
   position: relative;
   background-color: white;
   border-radius: 0.8rem;
   width: 90vw;
   height: 40rem;
-  /* max-height: 90vh; */
   max-width: 40rem;
   box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.4);
 }
@@ -49,7 +47,6 @@
   height: 2.5rem;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 0.3rem;
-  /* padding-left: 0.5rem; */
 }
 
 .createPostForm input::placeholder, .createPostForm textarea::placeholder{
@@ -171,4 +168,4 @@
 .createPostErrorMessage, .createPostForm .message {
   color: red;
   font-size: 0.9rem;
-}
+} */
