--- a/src/assets/css/detailRentalUnit.css
+++ b/src/assets/css/detailRentalUnit.css
@@ -40,8 +40,40 @@
   margin-top: 2rem;
 }
 
-.DetailRentalUnit .heartIcon {
-  float: right;
+.DetailRentalUnit .view {
+  /* float: right; */
+  display: flex;
+  align-items: center;
+  padding-left: 2rem;
+}
+
+.DetailRentalUnit .heart{
+  width: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.DetailRentalUnit .heart p{
+  width: 1.5rem;
+}
+
+.DetailRentalUnit .main .icon {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.DetailRentalUnit .heartIcon .numberOfLike,
+.DetailRentalUnit .view .numberOfView {
+  font-size: 1rem;
+  width: 2rem;
+}
+
+.DetailRentalUnit .view i {
+  font-size: 2rem;
+  display: inline-block;
+  padding-left: 0.5rem;
+  color: var(--main-color);
 }
 
 .DetailRentalUnit .date-report {
