--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,6 +1,8 @@
 .Footer{
     background-color: #34214e88;
     padding: 2rem 1rem;
+    position: relative;
+    z-index: 1;
 }
 
 .Footer .col-container{
