--- a/src/assets/css/pagination.css
+++ b/src/assets/css/pagination.css
@@ -28,7 +28,7 @@
     transition: 0.2s;
 }
 
-.Pagination li:hover{
+.Pagination li:hover, .Pagination .activePage{
     background-color: #8d62c2;
     box-shadow: 2px 2px 11px 0px rgba(135,135,135,1);
     color: rgb(236, 236, 236);
