--- a/src/assets/css/searchBar.css
+++ b/src/assets/css/searchBar.css
@@ -46,12 +46,28 @@
   border-radius: 0.2rem;
   transition: 0.3s;
   cursor: pointer;
+  font-size: 1.1rem;
+  font-family: var(--second-font-family);
 }
-.SearchBar button:hover {
-  background-color: #8d62c2;
-}
+
 .SearchBar .AutoAddress span {
   display: none;
+}
+
+.SearchBar .resetSearchBar{
+  background-color: white;
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+  padding-top: 0.5rem;
+}
+
+.SearchBar .btn .searchBtn:hover{
+  background-color: #9442f8;
+}
+
+.SearchBar .resetSearchBar:hover{
+  color: white;
+  background-color: var(--main-color);
 }
 
 .SearchBar select {
