post_page delete, modify, extend date

--- a/src/assets/css/modifyPost.css
+++ b/src/assets/css/modifyPost.css
@@ -9,6 +9,10 @@
   padding: 1rem;
 }
 
+.createPostErrorMessage{
+  color: red;
+}
+
 .ModifyPost label p, .ModifyPost .AutoAddress span{
   font-weight: bold;
   color: rgb(65, 65, 65);
