--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,13 +1,35 @@
-.Home .homeImage {
-    background: linear-gradient(0deg, #00000082, #00000082),
-      url('../img/couch-scaled_optimized.jpg');
-    height: 45rem;
-    max-height: 100vh;
-    background-size: cover;
-  }
+@import 'config.css';
 
-  @media (min-width: 1200px){
-    .Home .homeImage{
-      height: 100vh;
-    }
+.Home .homeImage {
+  background: linear-gradient(0deg, #00000082, #00000082),
+    url('../img/couch-scaled_optimized.jpg');
+  height: 45rem;
+  max-height: 100vh;
+  background-size: cover;
+}
+
+.Home .textTitle {
+  font-size: 4rem;
+  color: rgb(223, 223, 223);
+  position: absolute;
+  top: 30%;
+  left: 30%;
+}
+
+.Home .textTitle span {
+  color: #c292fc;
+  font-weight: bold;
+}
+
+.Home .textTitle p {
+  font-size: 1.7rem;
+  padding-top: 1rem;
+  font-family: var(--second-font-family);
+  color: rgb(185, 185, 185);
+}
+
+@media (min-width: 1200px) {
+  .Home .homeImage {
+    height: 100vh;
   }
+}
